package org.example.s3.enums;

public enum Permission {
  READ,
  WRITE
}
